# skeletonization

./: README.md
results/: data2.csv
results/thinning/runtime/: thinningExecutionTime.csv
src/: .main.cpp.swp  CMakeLists.txt  a.out  data.csv  main.cpp
src/2d/: .skeletonization.h.swp  .thinning.h.swp  .timer.h.swp  imageFunctions.h  potentialFields.h  skeletonization.h  thinning.h  timer.h
